<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Fon</string>
	<string name="user">Username</string>
	<string name="password">Password</string>
	<string name="active">Active</string>
	<string name="header_text">Enter your Fon username and password.\nYou will be automatically connected when you encounter a Fon Wi-Fi hotspot.</string>

	<string name="active_summary">Check to activate automatic Fon Login</string>
	<string name="user_summary">Your Fon username</string>
	<string name="password_summary">Your Fon password</string>
	<string name="notif_title_ok">Fon</string>
	<string name="notif_text_ok">Connected to %s</string>
	<string name="notif_title_ko">Fon</string>
	<string name="notif_text_ko">Error connecting to Fon {%s}</string>
	<string name="notif_default_ssid">Fon</string>
	<string name="notif_error_100">Login failed</string>
	<string name="notif_error_1024">WISPr not present</string>
	<string name="notif_error_255">Internal error</string>

	<string name="connectionNotifications">Notifications</string>
	<string name="connectionNotificationsEnable">Enable notifications</string>
	<string name="connectionNotificationsSummary">Display notifications when you connect to Fon</string>
	<string name="connectionNotificationsVibrate">Vibrate</string>
	<string name="connectionNotificationsVibrateSummary">Vibrate when you connect to Fon</string>
	<string name="connectionAutoEnable">Auto connect</string>
	<string name="connectionAutoSummary">Automatically connect to any available Fon Spot</string>
	<string name="connectionRingtoneSummary">Sound to play when you connect to Fon</string>

	<string name="ringtone">Notification sound</string>
	<string name="general">Login Configuration</string>

	<string name="help_text">If you need assistance, please visit http://corp.fon.com/support/</string>
	<string name="help_title">Help</string>

	<string name="ok">OK</string>

	<string name="menu_close">Close</string>
	<string name="menu_logOff">LogOff</string>
	<string name="menu_advanced">Advanced Preferences</string>
	<string name="menu_back">Back</string>
	<string name="menu_help">Help</string>
	
	<string name="banner">Banner</string>


	<string name="pref_active">pref.active</string>
	<string name="pref_username">pref.username</string>
	<string name="pref_password">pref.password</string>
	<string name="pref_ssid">pref.ssid</string>
	<string name="pref_bssid">pref.bssid</string>
	<string name="pref_connectionNotificationsEnable">pref.connectionNotificationEnable</string>
	<string name="pref_connectionRingtone">pref.connectionRingtone</string>
	<string name="pref_connectionVibrate">pref.connectionVibrate</string>
	<string name="pref_connectionAutoEnable">pref.connectionAutoEnable</string>
	<string name="pref_logOffUrl">pref.logOffUrl</string>
	<!--  <string name="pref_logOff">pref.logOff</string>  -->
</resources>
